# streaming-teachback

./: .env.example  .gitignore  README.md  prd.json
backend/: bridge.py  pyproject.toml  worker.py
backend/activities/: ask_llm.py
backend/shared/: config.py  models.py
backend/tests/: test_e2e_stream.py  test_retry_dedup.py  test_stream_init.py
backend/workflows/: ask_workflow.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: code-pane.tsx  token-feed.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/lib/: api.ts  reducer.ts  types.ts
scripts/: _common.sh  kill-and-restart.sh  kill-bridge.sh  start-demo.sh  stop-demo.sh
